Added POST endpoint for adding single plan details
The input data is not stored yet.
